--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=DEBUG, Appender1,Appender2
-log4j.appender.Appender1=org.apache.log4j.ConsoleAppender
-log4j.appender.Appender1.layout=org.apache.log4j.PatternLayout
-log4j.appender.Appender1.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
+log4j.rootLogger=DEBUG, console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%-7p %c %x - %m%n
+#log4j.appender.console.layout.ConversionPattern=%-7p %d [%t] %c %x - %m%n
