--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,10 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+          java-version: 1.8
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
