--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,3 +38,19 @@ jobs:
           java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
+    - name: 'Hello World'
+      description: 'Greet someone and record the time'
+      inputs:
+        who-to-greet:  # id of input
+          description: 'Who to greet'
+          required: true
+          default: 'World'
+      outputs:
+        time: # id of output
+          description: 'The time we greeted you'
+      runs:
+        using: 'docker'
+        image: 'Dockerfile'
+        args:
+          - ${{ inputs.who-to-greet }}      
