--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,18 +40,11 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - name: 'Hello World'
-      description: 'Greet someone and record the time'
-      inputs:
-        who-to-greet:  # id of input
-          description: 'Who to greet'
-          required: true
-          default: 'World'
-      outputs:
-        time: # id of output
-          description: 'The time we greeted you'
-      runs:
-        using: 'docker'
-        image: 'Dockerfile'
-        args:
-          - ${{ inputs.who-to-greet }}      
+    - name: Login to Docker Hub
+      run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+    
+    - name: Build Docker image
+      run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+    
+    - name: Publish Docker image
+      run: docker push $REPO 
