--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
     
     - name: Build Docker image
-      run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+      run: docker build -t bfblog/spark:latest -t bfblog/spark:${GITHUB_SHA::8} .
     
     - name: Publish Docker image
       run: docker push $REPO 
