--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>spark-tools</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+
+  <url>https://github.com/bfblog/spark-tools</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
