--- a/pom.xml
+++ b/pom.xml
@@ -26,19 +26,19 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.17.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.12</artifactId>
-      <version>3.0.0</version>
+      <artifactId>spark-core_2.13</artifactId>
+      <version>3.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.12</artifactId>
-      <version>3.0.0</version>
+      <artifactId>spark-sql_2.13</artifactId>
+      <version>3.2.1</version>
     </dependency>
   </dependencies>
 
