--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -3,14 +3,11 @@ kind: Ingress
 metadata:
   name: tekton-dashboard
   namespace: tekton-pipelines
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: 192.168.49.2.nip.io
-      http:
+    - http:
         paths:
-          - path: /
+          - path: "/"
             pathType: Prefix
             backend:
               service:
